--- a/CalculatorApp/app/src/main/AndroidManifest.xml
+++ b/CalculatorApp/app/src/main/AndroidManifest.xml
@@ -24,6 +24,19 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+        <receiver
+            android:name=".widget.CalculatorWidgetReceiver"
+            android:label="@string/app_name"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/calculator_widget_config" />
+        </receiver>
     </application>
 
 </manifest>
