--- a/CalculatorApp/app/src/main/AndroidManifest.xml
+++ b/CalculatorApp/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
 
         <receiver android:name=".utils.DeleteAllLongClickListener" />
 
-
+        <receiver android:name=".utils.ConfigurationListener"/>
 
     </application>
 
