--- a/CalculatorApp/gradle/libs.versions.toml
+++ b/CalculatorApp/gradle/libs.versions.toml
@@ -1,53 +1,50 @@
 [versions]
 ##agp = "8.2.0-alpha16"
-agp = "8.1.2"
+agp = "8.1.4"
 converterScalars = "2.9.0"
 converterGson = "2.9.0"
 coil = "2.4.0"
-jetbrains-kotlinx-coroutines-test = "1.7.1"
-kotlin = "1.8.21"
-core-ktx = "1.12.0"
+jetbrains-kotlinx-coroutines-test = "1.8.0"
+kotlin = "2.0.0"
+core-ktx = "1.13.1"
 junit = "4.13.2"
-androidx-test-ext-junit = "1.1.5"
-espresso-core = "3.5.1"
-appcompat = "1.6.1"
-kotlinx-coroutines-test = "1.7.1"
+androidx-test-ext-junit = "1.2.1"
+espresso-core = "3.6.1"
+appcompat = "1.7.0"
+kotlinx-coroutines-test = "1.8.0"
 legacy-support-v4 = "1.0.0"
 loggingInterceptor = "4.10.0"
-material = "1.11.0"
+material = "1.12.0"
 constraintlayout = "2.1.4"
 mathparserorgmxparser = "4.4.2"
 retrofit2KotlinCoroutinesAdapter = "0.9.2"
-mockwebserver = "4.10.0"
-retrofit = "2.9.0"
-okhttp = "4.11.0"
-room-runtime = "2.5.1"
+retrofit = "2.11.0"
+okhttp = "4.12.0"
 searchablespinner = "1.0.0"
-versionLifecycle = "2.6.1"
-roomKtx = "2.5.1"
+versionLifecycle = "2.8.4"
+room = "2.6.1"
 timber = "5.0.1"
 squareup-mockwebserver = "4.10.0"
-navVersion = "2.6.0"
+navigation = "2.7.7"
 recyclerview = "1.3.2"
 multidexVersion = "2.0.1"
 
 [libraries]
 androidx-legacy-support-v4 = { module = "androidx.legacy:legacy-support-v4", version.ref = "legacy-support-v4" }
-androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room-runtime" }
+androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-lifecycle-viewmodel-savedstate = { module = "androidx.lifecycle:lifecycle-viewmodel-savedstate", version.ref = "versionLifecycle" }
 androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "versionLifecycle" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "versionLifecycle" }
-androidx-navigation-dynamic-features-fragment = { module = "androidx.navigation:navigation-dynamic-features-fragment", version.ref = "navVersion" }
-androidx-navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navVersion" }
-androidx-navigation-fragment-ktx = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navVersion" }
+androidx-navigation-dynamic-features-fragment = { module = "androidx.navigation:navigation-dynamic-features-fragment", version.ref = "navigation" }
+androidx-navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigation" }
+androidx-navigation-fragment-ktx = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigation" }
 androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
-androidx-room-rxjava2 = { module = "androidx.room:room-rxjava2", version.ref = "room-runtime" }
-androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomKtx" }
 converter-scalars = { module = "com.squareup.retrofit2:converter-scalars", version.ref = "converterScalars" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
-jetbrains-kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "jetbrains-kotlinx-coroutines-test" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
@@ -64,7 +61,6 @@ mathparserorgmxparser = { module = "org.mariuszgromada.math:MathParser.org-mXpar
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 retrofit2-kotlin-coroutines-adapter = { module = "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter", version.ref = "retrofit2KotlinCoroutinesAdapter" }
 okhttp3-mockwebserver = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "squareup-mockwebserver" }
-mockwebserver = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "mockwebserver" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 multidex = {module = "androidx.multidex:multidex", version.ref = "multidexVersion"}
@@ -72,4 +68,5 @@ multidex = {module = "androidx.multidex:multidex", version.ref = "multidexVersio
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-
+ksp = { id = "com.google.devtools.ksp", version = "2.0.0-1.0.23" }
+navigation-safeargs = { id = "androidx.navigation.safeargs", version.ref = "navigation" }
