--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,16 +25,16 @@ jobs:
           distribution: 'temurin'
 
       - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+        run: chmod +x ./CalculatorApp/gradlew
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./CalculatorApp/gradlew build
 
       - name: Build debug APK
-        run: bash ./gradlew assembleDebug --stacktrace
+        run: bash ./CalculatorApp/gradlew assembleDebug --stacktrace
 
       - name: Check files
-        run: ls -al app/build/outputs/apk/debug
+        run: ls -al ./CalculatorApp/app/build/outputs/apk/debug
 
       - name: Create Release
         id: create_release
@@ -55,7 +55,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: app/build/outputs/apk/debug/app-debug.apk
+          asset_path: ./CalculatorApp/app/build/outputs/apk/debug/app-debug.apk
           asset_name: ${{ github.event.repository.name }}.apk
           asset_content_type: application/vnd.android.package-archive
 
@@ -64,4 +64,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: app-release.apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+          path: ./CalculatorApp/app/build/outputs/apk/debug/app-debug.apk
