--- a/.github/workflows/build-sign.yml
+++ b/.github/workflows/build-sign.yml
@@ -2,45 +2,51 @@ name: Android build signed CI
 
 on:
   push:
-    branches: 
+    branches:
       - bugfix/widget_ui_and_dialog
       - Development
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+      # Checkout the code from the repository
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch the entire repository for better analysis
 
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
+      # Set up JDK 17
+      - name: Setup JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x ./CalculatorApp/gradlew
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./CalculatorApp/gradlew
 
-    - name: Build with Gradle
-      working-directory: ./CalculatorApp/
-      run: ./gradlew build 
+      - name: Build with Gradle
+        working-directory: ./CalculatorApp/
+        run: ./gradlew build
+        
+      - name: Build Release APK
+        working-directory: ./CalculatorApp/
+        run: ./gradlew assembleRelease 
 
-    - name: Build Release APK
-      working-directory: ./CalculatorApp/
-      run: ./gradlew assembleRelease 
+      - name: Sign APK
+        uses: r0adkll/sign-android-release@v1
+        id: sign_app
+        with:
+          releaseDirectory: app/build/outputs/apk/release
+          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+          alias: ${{ secrets.ALIAS }}
+          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
 
-    - name: Sign APK
-      uses: r0adkll/sign-android-release@v1
-      id: sign_app
-      with:
-        releaseDirectory: app/build/outputs/apk/release
-        signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-        alias: ${{ secrets.ALIAS }}
-        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-        keyPassword: ${{ secrets.KEY_PASSWORD }}
-
-    - name: Upload APK
-      uses: actions/upload-artifact@v3
-      with:
-        name: app-release-signed
-        path: ${{steps.sign_app.outputs.signedReleaseFile}}
+      - name: Upload APK
+        uses: actions/upload-artifact@v3
+        with:
+          name: app-release-signed
+          path: ${{steps.sign_app.outputs.signedReleaseFile}}
