--- a/.github/workflows/build-sign.yml
+++ b/.github/workflows/build-sign.yml
@@ -43,8 +43,9 @@ jobs:
       - name: Install build tools
         run: sdkmanager "build-tools;33.0.0"
 
-      - name: Sign APK
-        uses: r0adkll/sign-android-release@v1.0.4
+      - uses: r0adkll/sign-android-release@v1
+        name: Sign app APK
+        # ID used to access action output
         id: sign_app
         with:
           releaseDirectory: ./CalculatorApp/app/build/outputs/apk/release
@@ -52,10 +53,12 @@ jobs:
           alias: ${{ secrets.ALIAS }}
           keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
           keyPassword: ${{ secrets.KEY_PASSWORD }}
-          buildToolsVersion: '33.0.0'
+        env:
+          # override default build-tools version (33.0.0) -- optional
+          BUILD_TOOLS_VERSION: "33.0.0"
 
-      - name: Upload APK
-        uses: actions/upload-artifact@v3
+      # Example use of `signedReleaseFile` output -- not needed
+      - uses: actions/upload-artifact@v2
         with:
-          name: app-release-signed
+          name: Signed app bundle
           path: ${{steps.sign_app.outputs.signedReleaseFile}}
