--- a/.github/workflows/build-sign.yml
+++ b/.github/workflows/build-sign.yml
@@ -35,7 +35,7 @@ jobs:
         working-directory: ./CalculatorApp/
         run: ./gradlew assembleRelease 
 
-      - uses: Tlaster/android-sign@v1
+      - uses: MatiasG19/android-sign@v2
         name: Sign app APK
         with:
           releaseDirectory: |
